...
        android:contentDescription="@string/homeScreenImageDescription"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/run_woman" />

    <Button
        android:id="@+id/signInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primary"
        android:onClick="signIn"
        android:text="@string/signInButton"
        app:layout_constraintBottom_toBottomOf="parent"
...
